# verel

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  IAC-KICKOFF.md  LICENSE  MEMORY-EXTRACTION-KICKOFF.md  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml  renovate.json
.github/workflows/: chart-release.yml  chart.yml  ci.yml  docs.yml  image.yml  og.yml  operator-e2e.yml  policy.yml
brand/: render_og.py  social_verel.html
deploy/: Dockerfile  README.md
deploy/chart/: .helmignore  Chart.yaml  artifacthub-repo.yml  values.yaml
deploy/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/chart/templates/tests/: test-connection.yaml
deploy/crds/: brain.yaml  gaterun.yaml  gatewayservice.yaml  verelfleet.yaml
deploy/operator/: operator.yaml  rbac.yaml
deploy/policy/: README.md  polaris.yaml  scan.sh
docs/: ARCHITECTURE.md  CRITIC_CONVERGENCE.md  H2_RESULTS.md  K8S_DEPLOYMENT_DESIGN.md  SECURITY_RESIDUALS.md  SUBSTRATE_DESIGN.md  VEREL_DESIGN.md  VERIFIED_REVIEW_DESIGN.md  adoption.md  api.md  cli.md  comparison.md  configuration.md  examples.md  faq.md  getting-started.md  graders.md  index.md  integrations.md  kubernetes.md  memory-backends.md  memory-quickstart.md  recipes.md  try-it.md  tutorial.md  usage.md  use-cases-infra.md  use-cases-telecom.md  use-cases.md
docs/stylesheets/: extra.css
examples/: demo_agent_loop.py  demo_backend_registry.py  demo_canary_rollback.py  demo_capability_jail.py  demo_cicd.py  demo_consolidation.py  demo_distributed_fleet.py  demo_fleet_loop.py  demo_fleet_worktrees.py  demo_gateway.py  demo_h2_moat.py  demo_hosted_registry.py  demo_iac.py  demo_invariant_grader.py  demo_memory.py  demo_memory_loop.py  demo_monorepo_ci.py  demo_mutation.py  demo_overflow_loop.py  demo_polyglot_ci.py  demo_promotion.py  demo_rest_gate.py  demo_sdk_shims.py  demo_selfheal.py  demo_semantic_recall.py  demo_shared_brain.py  demo_smell_grader.py  demo_spec_grader.py  demo_telecom_cfg.py  demo_telecom_flagship.py  demo_telecom_kpi.py  demo_telecom_ran.py  demo_token_savings.py  demo_toolsmith.py  mcp.json  run_h2.py  run_h2_sweep.py
examples/iac-challenge/: README.md  main.tf  plan.json
examples/iac-challenge-round2/: .gitignore  README.md  ci-pipeline.yml  main.tf  plan.json
media/: generate_graphics.py  infographic.html  make_heal_gif.py  render_diagrams.py  render_infographic.py  social_agentvision.html  social_verel.html  space_index.html
src/verel/: README.md  __init__.py  _secrets.py  _sign.py  cli.py  dashboard.py  gateway.py  loop.py  mcp_server.py  smell.py  transport.py
src/verel/actuators/: __init__.py  access_verify.py  cloudcreds.py  terraform.py
src/verel/agents/: __init__.py  code_fixer.py  coder.py  llm.py
src/verel/ci/: __init__.py  __main__.py  canary.py  graders.py  heal.py  hooks.py  iac.py  invariants.py  k8s.py  medic.py  mutation.py  pipeline.py  rollback.py  spec.py  telecom_cfg.py  telecom_issues.py  telecom_kpi.py  telecom_model.py  telecom_nrm.py  telecom_pmxml.py  telecom_ran.py  telecom_rf.py
src/verel/ci/telecom_mappings/: TEMPLATE.yaml  open5gs.yaml
src/verel/ci/telecom_rules/: vitals_5g.yaml
src/verel/fleet/: __init__.py  control_plane.py  fence_sink.py  lease.py  llm_manager.py  manager.py  multirepo.py  saga.py  scheduler.py  task.py  worker.py  worktree.py
src/verel/integrations/: __init__.py  github.py  rest.py  sdk.py  snippets.py
src/verel/memory/: __init__.py  consolidate.py  embed.py  extract.py  failure_ledger.py  hosted.py  lance_backend.py  lattice.py  librarian.py  local.py  mem0_backend.py  pg_backend.py  principal.py  promotion.py  recall.py  redis_backend.py  registry.py  remember.py  replicated.py  revise.py  share.py  view.py
src/verel/operator/: __init__.py  __main__.py  deployments.py  handlers.py  jobs.py
src/verel/registry/: __init__.py  artifact.py  h2.py  hosted.py  store.py  transfer.py
src/verel/senses/: __init__.py  audio.py  percept_log.py  sight.py
src/verel/toolsmith/: __init__.py  container.py  registry.py  sandbox.py  seccomp.py  seccomp_learn.py  smith.py
src/verel/verdict/: __init__.py  attest.py  constants.py  fingerprint.py  gate.py  keys.py  models.py
tests/: conftest.py  memory_contract.py  test_antientropy.py  test_attest.py  test_audio_adapter.py  test_backend_registry.py  test_brain_tls.py  test_canary_rollback.py  test_capability_drift.py  test_ci.py  test_ci_senses.py  test_clamp_ceiling.py  test_cloud_access.py  test_coder.py  test_consolidation.py  test_cross_modal.py  test_dashboard.py  test_durability.py  test_embed_and_sandbox.py  test_fingerprint.py  test_fleet.py  test_fleet_hardening.py  test_gate.py  test_gateway.py  test_github_context.py  test_heal_and_surfaces.py  test_hosted_memory.py  test_hosted_registry.py  test_iac_graders.py  test_iac_policy.py  test_iac_security.py  test_iac_wiring.py  test_iam_sensor.py  test_integrations_snippets.py  test_invariant_grader.py  test_k8s_graders.py  test_lance_contract.py  test_lattice.py  test_ledger_lifecycle.py  test_librarian.py  (+46 more)
tools/: build_adoption.py  metrics_dashboard.py  pypi_country.py  sync_hf_map.py  verel-metrics-country.service  verel-metrics-country.timer  verel-metrics.service
