[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verel"
version = "0.0.1"
description = "The agent framework where nothing is done until a grader returns a verdict — verification + grounded perception (AgentVision eyes). Reserved; under active design."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["agents", "llm", "ai-agents", "evals", "verification", "agentvision", "orchestration", "memory"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
sight = ["agentvision[render]"]
mem0 = ["mem0ai>=0.1"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/amitpatole/verel"
Source = "https://github.com/amitpatole/verel"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/verel"]
