[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verel"
version = "1.3.1"
description = "The agent framework where nothing is done until a grader returns a verdict — verification + grounded perception (AgentVision eyes), compounding memory, a fleet, agent-built tooling, and agent-run CI/CD."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Amit Patole", email = "amit.patole@gmail.com" }]
keywords = ["agents", "llm", "ai-agents", "evals", "verification", "agentvision", "orchestration", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pydantic>=2",
]

[project.optional-dependencies]
sight = ["agentvision[render]"]
hearing = ["audel[asr]"]  # Audel-backed ears (DSP grounding + local ASR); add [cloud]/[clap] for analyze
container = ["pyseccomp"]  # seccomp-bpf syscall filter for the §7.7 bwrap container runner
attest = ["pynacl>=1.5"]  # ed25519 publicly-verifiable receipts (substrate §11); HMAC works without it
mem0 = ["mem0ai>=2.0", "chromadb>=0.5"]
postgres = ["psycopg[binary]>=3", "pgvector>=0.3"]  # external multi-machine brain — Postgres + pgvector ANN
lancedb = ["lancedb>=0.5"]  # embedded vector store — zero-infra ANN recall (a vector-native LocalMemory)
redis = ["redis>=5"]  # networked shared brain — atomic optimistic-concurrency RMW over Redis
operator = ["kopf>=1.37", "kubernetes>=29"]  # the Kubernetes operator (Kopf) reconciling the Verel CRDs
mcp = ["mcp>=1.0", "anyio>=4"]
# IaC / DevOps graders + IAM sensor (IAC-KICKOFF.md). The graders shell out to EXTERNAL binaries
# (terraform/tofu, trivy, tflint, checkov, conftest, infracost, kubectl, helm, kube-score/-linter,
# polaris) — not pip deps. The one Python dep is pyyaml, used (lazy-imported) to RBAC-scan
# `helm template` YAML output. `verel doctor` probes the binaries; a required grader whose tool is
# absent fails closed.
iac = ["pyyaml>=6"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6", "mypy>=1.10", "bandit>=1.7"]  # bandit = the pre-merge `security` grader; must be installed for that gate to run (else it fails closed)

[project.scripts]
verel = "verel.cli:main"
verel-ci = "verel.ci.__main__:main"
verel-mcp = "verel.mcp_server:main"
verel-operator = "verel.operator.__main__:main"

# Memory-backend registry (src/verel/memory/registry.py). Built-ins resolve from a static map
# first; this group lets a third-party package register its own MemoryView backend by name. Each
# target is the backend class, which must expose a `from_env()` classmethod.
[project.entry-points."verel.memory_backends"]
local = "verel.memory.local:LocalMemory"
remote = "verel.memory.hosted:RemoteMemory"
postgres = "verel.memory.pg_backend:PostgresMemory"
lancedb = "verel.memory.lance_backend:LanceMemory"
redis = "verel.memory.redis_backend:RedisMemory"

[project.urls]
Homepage = "https://github.com/amitpatole/verel"
Source = "https://github.com/amitpatole/verel"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E731", "B008", "SIM105"]

[tool.ruff.lint.per-file-ignores]
# Tests embed code-sample literals and use bare asserts; E501 on those is noise.
"tests/*" = ["E402", "B017", "SIM117", "E501"]
# Demos & media scripts favour compact setup (semicolon helpers, long illustrative strings).
"examples/*" = ["E402", "E501", "E702"]
"media/*" = ["E402", "E501", "E702"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = false
warn_unused_ignores = false
exclude = ["tests/", "examples/", "media/"]

[tool.hatch.build.targets.wheel]
packages = ["src/verel"]

[tool.hatch.build.targets.sdist]
# Exclude docs/ from the source distribution: the public docs live on the docs site, and
# internal notes (design / critic rounds) must never ship in the package.
exclude = ["media/*.png", ".github", ".venv", "docs"]
